# chronometry-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCE_PRD.md  FAQ.md  LICENSE  Makefile  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/chronometry-cli/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: README.md  system_config.yaml  user.chronometry.menubar.plist  user_config.yaml
src/chronometry/: __init__.py  __main__.py  annotate.py  capture.py  cli.py  common.py  digest.py  llm_backends.py  menubar_app.py  os_metadata.py  quick_test.py  runtime_stats.py  timeline.py  token_usage.py  validate.py  web_server.py
src/chronometry/defaults/: system_config.yaml  user.chronometry.webserver.plist  user_config.yaml
src/chronometry/templates/: dashboard.html
tests/: README.md  __init__.py  conftest.py  test_annotate.py  test_capture.py  test_common.py  test_digest.py  test_llm_backends.py  test_menubar_app.py  test_runtime_stats.py  test_timeline.py  test_token_usage.py  test_web_server.py
tests/docs/: RUN_TESTS.md  TESTING_QUICKSTART.md  TESTING_SUMMARY.md  TESTS_INDEX.md  TEST_IMPLEMENTATION_COMPLETE.md  TEST_PLAN.md  TEST_QA_DELIVERABLES.md  TEST_RESULTS.md  TEST_SUITE_COMPLETE.md
tools/: quick_test.py
